--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/dzarrr/social-media-card.git",
   "author": "Dzar Bela Hanifa <dzarbelahanifa@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "styled-components": "^3.3.3"
+  }
 }
